--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <title>Homework 1</title>
   </head>
   <body>
-    <p>Hello World</p>
+    <p></p>
+  </body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header><img src=" images/header/WebStudio.jpg" /></header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
