--- a/index.html
+++ b/index.html
@@ -1,24 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Homework 1</title>
-  </head>
-  <body>
-    <p></p>
-  </body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homework 1</title>
   </head>
   <body>
-    <header><img src=" images/header/WebStudio.jpg" /></header>
-    <main></main>
+    <header>
+      <nav>
+        <ul>
+          <li><a href=""></a>WebStudio</li>
+          <li>Agencja</li>
+          <li>Portfolio</li>
+          <li>Kontakt</li>
+        </ul>
+      </nav>
+      <a href="mailto/:info@devstudio.com">info@devstudio.com</a>
+      <a>+48 111 111 111</a>
+    </header>
+    <main>
+      <section>
+        <div>
+          <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+          <button type="button">Zamów usługe</button>
+        </div>
+      </section>
+      <section>
+        <div>
+          <p>LOREM IPSUM</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+          <p>LOREM IPSUM</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+          <p>LOREM IPSUM</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+          <p>LOREM IPSUM</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </div>
+      </section>
+      <div>
+        <h2>Czym się zajmujemy</h2>
+        <img
+          src="img.jpg"
+          alt="Pisanie na klawiaturze"
+          widht="370"
+          height="240"
+        />
+        <img
+          src="img(1).jpg"
+          alt="Trzyma telefon w ręce"
+          widht="370"
+          height="240"
+        />
+        <img src="box 3.jpg" alt="paleta kolorów" widht="370" height="240" />
+      </div>
+      <div>
+        <h2>Nasz zespół</h2>
+        <img
+          src="john doe.jpg"
+          alt="zdjecie john doe"
+          widht="406"
+          height="390"
+        />
+        <img
+          src="john doe 2.jpg"
+          alt="zdjecie john doe 2"
+          widht="810"
+          height="780"
+        />
+        <img
+          src="john doe 3.jpg"
+          alt="zdjecie john doe 3"
+          widht="810"
+          height="780"
+        />
+        <img
+          src="john doe 4.jpg"
+          alt="zdjecie john doe 4"
+          widht="810"
+          height="780"
+        />
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
