--- a/index.html
+++ b/index.html
@@ -64,36 +64,43 @@
           widht="370"
           height="240"
         />
-        <img src="box 3.jpg" alt="paleta kolorów" widht="370" height="240" />
+        <img src="box3.jpg" alt="paleta kolorów" widht="370" height="240" />
       </div>
       <div>
         <h2>Nasz zespół</h2>
-        <img
-          src="john doe.jpg"
-          alt="zdjecie john doe"
-          widht="406"
-          height="390"
-        />
-        <img
-          src="john doe 2.jpg"
-          alt="zdjecie john doe 2"
-          widht="810"
-          height="780"
-        />
-        <img
-          src="john doe 3.jpg"
-          alt="zdjecie john doe 3"
-          widht="810"
-          height="780"
-        />
-        <img
-          src="john doe 4.jpg"
-          alt="zdjecie john doe 4"
-          widht="810"
-          height="780"
-        />
+        <ul>
+          <li>
+            <img src="johndoe.jpg" alt="zdjecie john doe" />
+            <h3>John Doe</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="johndoe2.jpg" alt="zdjecie john doe 2" />
+            <h3>John Doe</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="johndoe3.jpg" alt="zdjecie john doe 3" />
+            <h3>John Doe</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="johndoe4.jpg" alt="zdjecie john doe 4" />
+            <h3>John Doe</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <p>WebStudio</p>
+      <adress>
+        <ul>
+          <li>m. Warszawa, Aleje Jerozolimskie 21</li>
+          <li><a href="mailto" info@example.com></a>info@example.com</li>
+          <li><a href="tel" +48 111 111 111></a>+48 111 111 111</li>
+        </ul>
+      </adress>
+    </footer>
   </body>
 </html>
