--- a/index.html
+++ b/index.html
@@ -52,40 +52,35 @@
       </section>
       <div>
         <h2>Czym się zajmujemy</h2>
-        <img
-          src="img.jpg"
-          alt="Pisanie na klawiaturze"
-          widht="370"
-          height="240"
-        />
-        <img
-          src="img(1).jpg"
-          alt="Trzyma telefon w ręce"
-          widht="370"
-          height="240"
-        />
-        <img src="box3.jpg" alt="paleta kolorów" widht="370" height="240" />
+        <img src="img.jpg" alt="Pisanie na klawiaturze" width: 370px; height:
+        294px; /> <img src="img(1).jpg" alt="Trzyma telefon w ręce" width:
+        370px; height: 294px; /> <img src="box3.jpg" alt="paleta kolorów" width:
+        370px; height: 294px; />
       </div>
       <div>
         <h2>Nasz zespół</h2>
         <ul>
           <li>
-            <img src="johndoe.jpg" alt="zdjecie john doe" />
+            <img src="johndoe.jpg" alt="zdjecie john doe" width: 270px; height:
+            260px;/>
             <h3>John Doe</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="johndoe2.jpg" alt="zdjecie john doe 2" />
+            <img src="johndoe2.jpg" alt="zdjecie john doe 2" width: 270px;
+            height: 260px;/>
             <h3>John Doe</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="johndoe3.jpg" alt="zdjecie john doe 3" />
+            <img src="johndoe3.jpg" alt="zdjecie john doe 3" width: 270px;
+            height: 260px;/>
             <h3>John Doe</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="johndoe4.jpg" alt="zdjecie john doe 4" />
+            <img src="johndoe4.jpg" alt="zdjecie john doe 4" width: 270px;
+            height: 260px;/>
             <h3>John Doe</h3>
             <p>UI Designer</p>
           </li>
