--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header>
       <nav>
         <ul>
-          <li><a href=""></a>WebStudio</li>
+          <li><a href="WebStudio"></a>WebStudio</li>
           <li>Agencja</li>
           <li>Portfolio</li>
           <li>Kontakt</li>
         </ul>
       </nav>
-      <a href="mailto/:info@devstudio.com">info@devstudio.com</a>
-      <a>+48 111 111 111</a>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="+48 111 111 111">+48 111 111 111</a>
     </header>
     <main>
       <section>
@@ -52,34 +52,34 @@
       </section>
       <div>
         <h2>Czym się zajmujemy</h2>
-        <img src="img.jpg" alt="Pisanie na klawiaturze" width: 370px; height:
-        294px; /> <img src="img(1).jpg" alt="Trzyma telefon w ręce" width:
-        370px; height: 294px; /> <img src="box3.jpg" alt="paleta kolorów" width:
-        370px; height: 294px; />
+        <img src="/images/biuro1.jpg" alt="Write on keyboard" width: 370px;
+        height: 294px; /> <img src="/images/biuro2.jpg" alt="Hold phone" width:
+        370px; height: 294px; /> <img src="/images/biuro3.jpg" alt="color
+        palette" width: 370px; height: 294px; />
       </div>
       <div>
         <h2>Nasz zespół</h2>
         <ul>
           <li>
-            <img src="johndoe.jpg" alt="zdjecie john doe" width: 270px; height:
-            260px;/>
+            <img src="/images/team-1.jpg" alt="Photo John Doe" width: 270px;
+            height: 260px;/>
             <h3>John Doe</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="johndoe2.jpg" alt="zdjecie john doe 2" width: 270px;
+            <img src="/images/team-2.jpg" alt="Photo John Doe 2" width: 270px;
             height: 260px;/>
             <h3>John Doe</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="johndoe3.jpg" alt="zdjecie john doe 3" width: 270px;
+            <img src="/images/team-3.jpg" alt="Photo John Doe 3" width: 270px;
             height: 260px;/>
             <h3>John Doe</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="johndoe4.jpg" alt="zdjecie john doe 4" width: 270px;
+            <img src="/images/team-4.jpg" alt="Photo John Doe 4" width: 270px;
             height: 260px;/>
             <h3>John Doe</h3>
             <p>UI Designer</p>
@@ -89,13 +89,13 @@
     </main>
     <footer>
       <p>WebStudio</p>
-      <adress>
+      <address>
         <ul>
           <li>m. Warszawa, Aleje Jerozolimskie 21</li>
           <li><a href="mailto" info@example.com></a>info@example.com</li>
           <li><a href="tel" +48 111 111 111></a>+48 111 111 111</li>
         </ul>
-      </adress>
+      </address>
     </footer>
   </body>
 </html>
