--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="+48 111 111 111">+48 111 111 111</a>
+      <a href="tel:+48 111 111 111">+48 111 111 111</a>
     </header>
     <main>
       <section>
@@ -52,35 +52,65 @@
       </section>
       <div>
         <h2>Czym się zajmujemy</h2>
-        <img src="/images/biuro1.jpg" alt="Write on keyboard" width: 370px;
-        height: 294px; /> <img src="/images/biuro2.jpg" alt="Hold phone" width:
-        370px; height: 294px; /> <img src="/images/biuro3.jpg" alt="color
-        palette" width: 370px; height: 294px; />
+        <img
+          src="./images/biuro1.jpg"
+          alt="Write on keyboard"
+          width="370"
+          height="294"
+        />
+        <img
+          src="./images/biuro2.jpg"
+          alt="Hold phone"
+          width="370"
+          height="294"
+        />
+        <img
+          src="./images/biuro3.jpg"
+          alt="color palette"
+          width="370"
+          height="294"
+        />
       </div>
       <div>
         <h2>Nasz zespół</h2>
         <ul>
           <li>
-            <img src="/images/team-1.jpg" alt="Photo John Doe" width: 270px;
-            height: 260px;/>
+            <img
+              src="./images/team-1.jpg"
+              alt="Photo John Doe"
+              width="270"
+              height="260"
+            />
             <h3>John Doe</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/team-2.jpg" alt="Photo John Doe 2" width: 270px;
-            height: 260px;/>
+            <img
+              src="./images/team-2.jpg"
+              alt="Photo John Doe 2"
+              width="270"
+              height="260"
+            />
             <h3>John Doe</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="/images/team-3.jpg" alt="Photo John Doe 3" width: 270px;
-            height: 260px;/>
+            <img
+              src="./images/team-3.jpg"
+              alt="Photo John Doe 3"
+              width="270"
+              height="260"
+            />
             <h3>John Doe</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="/images/team-4.jpg" alt="Photo John Doe 4" width: 270px;
-            height: 260px;/>
+            <img
+              src="./images/team-4.jpg"
+              alt="Photo John Doe 4"
+              width="270"
+              height="260"
+            />
             <h3>John Doe</h3>
             <p>UI Designer</p>
           </li>
@@ -92,8 +122,8 @@
       <address>
         <ul>
           <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-          <li><a href="mailto" info@example.com></a>info@example.com</li>
-          <li><a href="tel" +48 111 111 111></a>+48 111 111 111</li>
+          <li><a href="mailto:info@example.com"></a>info@example.com</li>
+          <li><a href="tel:+48 111 111 111"></a>+48 111 111 111</li>
         </ul>
       </address>
     </footer>
