--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header>
       <nav>
         <ul>
-          <li><a href="WebStudio"></a>WebStudio</li>
+          <li><a href="WebStudio">WebStudio</a></li>
           <li>Agencja</li>
           <li>Portfolio</li>
           <li>Kontakt</li>
         </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48 111 111 111">+48 111 111 111</a>
+      <a href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
       <section>
@@ -52,24 +52,30 @@
       </section>
       <div>
         <h2>Czym się zajmujemy</h2>
-        <img
-          src="./images/biuro1.jpg"
-          alt="Write on keyboard"
-          width="370"
-          height="294"
-        />
-        <img
-          src="./images/biuro2.jpg"
-          alt="Hold phone"
-          width="370"
-          height="294"
-        />
-        <img
-          src="./images/biuro3.jpg"
-          alt="color palette"
-          width="370"
-          height="294"
-        />
+        <li>
+          <img
+            src="./images/biuro1.jpg"
+            alt="Write on keyboard"
+            width="370"
+            height="294"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/biuro2.jpg"
+            alt="Hold phone"
+            width="370"
+            height="294"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/biuro3.jpg"
+            alt="color palette"
+            width="370"
+            height="294"
+          />
+        </li>
       </div>
       <div>
         <h2>Nasz zespół</h2>
@@ -123,7 +129,7 @@
         <ul>
           <li>m. Warszawa, Aleje Jerozolimskie 21</li>
           <li><a href="mailto:info@example.com"></a>info@example.com</li>
-          <li><a href="tel:+48 111 111 111"></a>+48 111 111 111</li>
+          <li><a href="tel:+48111111111"></a>+48 111 111 111</li>
         </ul>
       </address>
     </footer>
