--- a/goit-markup-hw-02/index.html
+++ b/goit-markup-hw-02/index.html
@@ -7,6 +7,7 @@
     <title>Homework 1</title>
   </head>
   <body>
+    <a href="/portfolio.html">Portfolio</a>
     <header>
       <nav>
         <ul>
